--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,19 +12,26 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # Core Dependencies
-  json_annotation: ^4.8.1
-  kartal: ^3.4.4
-  vexana: ^3.5.4
-  flutter_riverpod: ^2.4.9
-  equatable: ^2.0.5
-  envied: ^0.5.2
-  easy_localization: ^3.0.3
-
   cupertino_icons: ^1.0.2
+
+  # Core    
+  equatable: ^2.0.5
+
+  # State
+  flutter_riverpod: ^2.4.9
+
+  # Config
+  envied: ^0.5.2
+  json_annotation: ^4.8.1
+  easy_localization: ^3.0.3
 
   # Utility
   logger: ^2.0.2+1
+  kartal: ^3.4.4
+
+  # Network
+  vexana: ^3.5.4
+
 
   widgets:
     path: module/widgets
@@ -41,6 +48,7 @@ dev_dependencies:
   build_runner: ^2.4.7
   flutter_gen_runner: ^5.3.2
   flutter_launcher_icons: ^0.13.1
+  envied_generator: ^0.5.2
 
 flutter_launcher_icons:
   android: "launcher_icon"
