read environments from gen package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,6 @@ dependencies:
   flutter_riverpod: ^2.4.9
 
   # Config
-  envied: ^0.5.2
-  json_annotation: ^4.8.1
   easy_localization: ^3.0.3
 
   # Utility
@@ -36,6 +34,9 @@ dependencies:
   widgets:
     path: module/widgets
 
+  gen:
+    path: module/gen
+
 # dependency_overrides: 
 #   cupertino_icons: ^1.0.1
 
@@ -45,10 +46,7 @@ dev_dependencies:
 
   flutter_lints: ^2.0.0
   very_good_analysis: ^5.1.0
-  build_runner: ^2.4.7
-  flutter_gen_runner: ^5.3.2
   flutter_launcher_icons: ^0.13.1
-  envied_generator: ^0.5.2
 
 flutter_launcher_icons:
   android: "launcher_icon"
@@ -56,11 +54,6 @@ flutter_launcher_icons:
   image_path: "assets/app/app_icon.png"
   min_sdk_version: 21
   remove_alpha_ios: true
-
-flutter_gen:
-  output: lib/product/generated/
-  integrations:
-    lottie: true
 
 flutter:
   uses-material-design: true
