--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   # Network
   vexana: ^3.5.4
 
+  # Navigation
+  auto_route: ^7.8.4
 
   widgets:
     path: module/widgets
@@ -47,6 +49,8 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   very_good_analysis: ^5.1.0
   flutter_launcher_icons: ^0.13.1
+  auto_route_generator: ^7.3.2
+  build_runner: ^2.4.7
 
 flutter_launcher_icons:
   android: "launcher_icon"
