--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,13 @@ dependencies:
   # Navigation
   auto_route: ^7.8.4
 
+  # Modules
   widgets:
     path: module/widgets
-
   gen:
     path: module/gen
+  common:
+    path: module/common
 
 # dependency_overrides: 
 #   cupertino_icons: ^1.0.1
